# referendumServices

./: .dockerignore  .env  .gci.yml  .gitignore  .gitmodules  .golangci.bck.yml  .golangci.yml  .pre-commit-config.yaml  .style.yapf  Dockerfile  LICENSE  Makefile  README.md  app.db  docker-compose.prod.yml  docker-compose.yml  instances.json  local_init.sh  m.diff  main.diff  pdf_refinement.ipynb  pyproject.toml  pytest.ini  requirements.txt  subnets.json
.github/: dependabot.yml
.github/workflows/: atp_service_test.yml  data_service_test.yml  deploy.yml  deploy_api.yml  legiscan_pull.yml  lint.yml  migration.yaml  run_pipeline.yml  test.yml  user_deploy.yml  user_service_test.yml  version_update.yml
alembic/: env.py
alembic/data/: definitions_v1.yaml
alembic/versions/: 0c742e81f876_replace_bill_version_relation_with_.py  1ba49462cc5f_add_session_table.py  296fffa291c7_add_user_settings.py  5d3c3085c67c_initialize_database.py  5fe048772214_create_status_table.py  837fed54a80f_fix_table_naming.py  (+18 more)
api/: app.py  auth.py  config.py  constants.py  crud.py  database.py  main.py  models.py  sample_data.py  schemas.py  security.py  settings.py
atp/: Dockerfile  go.mod  go.sum
atp_service/: go.mod  go.sum
data/: filter_dump.sh  legiscan_api.sql  legislator_votes.json  legislators.json
data_service/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
data_service/alembic/: env.py
data_service/alembic/versions/: 01793d9ea433_actor_authentication.py  030be05fff89_representing_state_id_as_integer.py  050e288b3df8_create_atproto_schema_and_tables.py  15516b02753d_add_hash_to_bill_versions.py  23eef83c79f6_rename_person_users.py  297f99638c3f_create_car_tables.py  3adfde5f33f0_add_pds_data_to_legislators.py  3adfde5f33f0_pds_data.py  43e4bac6f9b5_create_and_use_updated_at_trigger_.py  4bc80e18174b_add_followthemoney_eid.py  5d3c3085c67c_initialize_database.py  5dde7444fa97_legislation_follow_table.py  666faf2329e3_no_null_status_dates.py  6ce6213e39f6_atproto_legislator_table.py  721daf5ae461_atp_table_updates.py  774fd2bbabc3_nullable_dates.py  7e50042a4e42_actor_auth_indexes.py  86ff840c38ac_remove_stale_ref_table.py  895ad8c038a1_create_state_abbr_column.py  8c120e0c6ace_relocate_user_fields.py  9546aedcaac4_use_state_for_legislature_relationships.py  a8b4f2c91d3e_add_url_to_bill_versions.py  b7f235dc8bd5_update_bill_actions.py  bde3976872b8_create_forgot_password_token_table.py  bde3976872b8_create_password_reset_token_table.py  c2ba66e883d7_move_auth_again.py  d5945315bd6d_rename_users.py  ea680b63e3c8_legislator_data_model_change.py  f3584da4c065_add_did_uid.py  f3f16fd3e4be_add_status_date_constraint.py  f47d504ae1ff_update_bill_sponsors.py  fe24345379df_executive_orders.py
data_service/api/: constants.py  main.py  security.py  settings.py
data_service/api/endpoints/: _core.py  authentication.py  bill_versions.py  bills.py  chambers.py  comments.py  committees.py  executive_orders.py  health.py  legislative_bodys.py  legislator_votes.py  legislators.py  legislatures.py  presidents.py  statuses.py  topics.py  users.py  vote_choices.py
data_service/api/schemas/: interactions.py  resources.py  users.py
data_service/api/tests/: conftest.py  test_authentication.py  test_bills.py  test_executive_orders.py  test_health.py  test_legislators.py  test_topics.py  test_user_votes.py  test_users.py  test_utils.py
data_service/common/aws/s3/: client.py
data_service/common/aws/secretsManager/: client.py
data_service/common/aws/secrets_manager/: client.py
data_service/common/chat/: bill.py  service.py
data_service/common/database/postgres_core/: utils.py
data_service/common/database/referendum/: crud.py  models.py  schemas.py
data_service/common/email_service/: service.py
data_service/common/email_service/templates/: password_reset.html
data_service/common/object_storage/: client.py
data_service/common/user_service/: client.py
data_service/data/: legiscan_api.sql
data_service/infra/: gpu_instance_manager.py
data_service/pipeline/: bill_pdf_parser.py  bill_text_extraction.py  etl_config.py  etl_configs.json  legiscan_etl_configs.json  pds_etl_configs.json  run.py  summarize.py  test.txt
data_service/pipeline/tests/: test_run.py
data_service/scripts/: local_db_init.sh  localstack_init.sh
infra/: ec2_manager.py  gpu_instance_manager.py
localstack-init/: 01-init.sh  01-s3-init.sh  02-secrets-init.sh
pipeline/: bill_pdf_parser.py  bill_text_extraction.py  etl_config.py  etl_configs.json  etl_configs.py  run.py  shorttest.txt  summarise.py  summarize.py  test.py  testmore.txt  wth.py
scripts/: 2024_cr.html  2024_cr.json  bill_parser.py  bill_text_schemas.py  categorization_keywords.py  entrypoint.sh  load_database.py  local_init.sh
tests/: test_app.py
user_service/: Dockerfile  README.md  go.mod  go.sum  kms_seed.yaml  m.txt  private_key.pem
(+289 files in other folders)
