[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "referendumServices"
dynamic = ["version"]
description = ""
authors = [{name = "Makani Dalton", email = "makani@referendumapp.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "boto3",
    "debugpy",
    "fastapi[standard]",
    "alembic",
    "argon2-cffi",
    "sqlalchemy",
    "pandas",
    "passlib",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "python-jose",
    "watchtower"
]

[project.optional-dependencies]
test = ["httpx", "pytest", "pytest-asyncio", "flake8"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
    /(
      # directories
      \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | build
      | dist
    )/
    '''

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
