[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "referendumServices"
dynamic = ["version"]
description = ""
authors = [{name = "Makani Dalton", email = "makani@referendumapp.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.1",
    "argon2-cffi==23.1.0",
    "boto3==1.36.2",
    "debugpy==1.8.11",
    "fastapi[standard]",
    "langchain==0.3.14",
    "langchain-community==0.3.14",
    "langchain-openai==0.3.0",
    "openai==1.59.6",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    "python-jose==3.3.0",
    "PyPDF2==3.0.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.37",
    "tenacity==9.0.0",
    "transformers==4.48.0",
    "watchtower==3.3.1"
]

[project.optional-dependencies]
test = ["httpx", "pytest", "pytest-asyncio"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
    /(
      # directories
      \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | build
      | dist
    )/
    '''

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
