[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "referendumServices"
dynamic = ["version"]
description = ""
authors = [{name = "Makani Dalton", email = "makani@referendumapp.com"}]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "alembic==1.16.1",
    "argon2-cffi==23.1.0",
    "boto3==1.38.27",
    "debugpy==1.8.14",
    "fastapi[standard]",
    "google-auth==2.40.2",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-openai==0.3.18",
    "openai==1.82.1",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pdfminer.six==20250506",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "python-jose==3.5.0",
    "requests==2.32.3",
    "sqlalchemy==2.0.41",
    "tenacity==9.1.2",
    "watchtower==3.4.0",
    "structlog==25.3.0",
    "sentry-sdk[fastapi]==2.29.1"
]

[project.optional-dependencies]
test = ["black", "httpx", "pytest", "pytest-asyncio"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
    /(
      # directories
      \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | build
      | dist
    )/
    '''

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
